added some text

--- a/index.html
+++ b/index.html
@@ -17,22 +17,22 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas vitae metus in diam tempus pharetra. Praesent cursus convallis lectus, sit amet pellentesque dolor rhoncus non. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Morbi eget ullamcorper lorem, vel tincidunt leo. Ut tempus, urna venenatis pharetra hendrerit, nibh arcu tincidunt arcu, non lobortis mi purus nec libero. Curabitur consequat velit ut suscipit porttitor. Donec eros lacus, interdum eget convallis ac, ullamcorper cursus massa. Nam sed elit nisi. Quisque lectus mauris, feugiat id quam id, varius molestie tortor. Sed condimentum nunc leo, at rhoncus enim pharetra ac. Donec bibendum lacus ac enim venenatis, sit amet finibus dui maximus. Morbi fermentum id nibh ac rutrum. Nullam elit libero, posuere sit amet orci non, venenatis vestibulum tellus. Mauris urna nisl, pharetra tempor euismod vel, suscipit eu justo..</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Vestibulum tempor metus venenatis nisl cursus imperdiet. Nullam faucibus neque tellus, in tincidunt nunc vulputate id. Aliquam gravida massa eros, in volutpat felis facilisis non. Aliquam vitae risus sem. Ut id justo ut justo ullamcorper lobortis. Sed in vestibulum nulla, at aliquam felis. Pellentesque congue vestibulum luctus. In non arcu tellus. Sed mollis sapien ut sollicitudin condimentum. Mauris eu elit vitae orci rutrum semper vel vitae justo.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Duis rhoncus sodales sem in ullamcorper. Aliquam bibendum commodo nibh, id venenatis urna vestibulum vitae. Aliquam erat volutpat. Proin ut ultricies ipsum, vel vulputate ipsum. Vivamus tristique, velit quis varius rutrum, quam tellus pellentesque lorem, at iaculis tellus diam nec sapien. Duis vitae velit eu turpis consectetur scelerisque. Nulla porta enim at semper dictum. In luctus pulvinar malesuada. Fusce a tincidunt mi. Morbi quis massa tempor, commodo lectus faucibus, aliquam ex. Aenean ut pharetra odio, id bibendum turpis. Praesent sollicitudin ligula in ipsum interdum, eu mollis quam fringilla. In a nisi tellus.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Curabitur vel tincidunt felis, nec eleifend nisi. Curabitur nec dictum ipsum. Praesent lacinia pretium odio vitae bibendum. Etiam tempus ligula sem, vel tempor odio accumsan ut. Nam a diam scelerisque, ullamcorper elit a, sodales neque. Cras ligula metus, egestas vitae neque ut, congue luctus nisi. Donec in blandit tortor. Vivamus scelerisque nulla eleifend lacus semper accumsan. Nulla nec ultrices risus, nec tristique sem. Aliquam suscipit, ante ac facilisis tempor, dolor dui facilisis orci, non posuere enim orci et purus.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Curabitur vel tincidunt felis, nec eleifend nisi. Curabitur nec dictum ipsum. Praesent lacinia pretium odio vitae bibendum. Etiam tempus ligula sem, vel tempor odio accumsan ut. Nam a diam scelerisque, ullamcorper elit a, sodales neque. Cras ligula metus, egestas vitae neque ut, congue luctus nisi. Donec in blandit tortor. Vivamus scelerisque nulla eleifend lacus semper accumsan. Nulla nec ultrices risus, nec tristique sem. Aliquam suscipit, ante ac facilisis tempor, dolor dui facilisis orci, non posuere enim orci et purus.</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>It's the next step in the evolution of my career. Really, it is.</p>
     </section>
 
     <footer id="footer">
         <ul class="social">
-          <li><a href="http://www.github.com/usernamehere">Github</a></li>
+          <li><a href="https://benlaro0214.github.io/Bootcamp_coding/">Github</a></li>
         </ul>
     </footer>
 </body>
